Section abilities made

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a href="#">Home</a>
                 </div>
                 <div class="linkWrapper">
-                    <a href="#price">Serviços</a>
+                    <a href="#abilitiesSection">Serviços</a>
                 </div>
                 <div class="linkWrapper">
                     <a href="#">Localização</a>
@@ -61,7 +61,37 @@
         <a href="#" class="linkButton">Fazer uma consulta</a>
     </section>
 
-    <div id="price"></div>
+    <div class="abilitiesSection" id="abilitiesSection">
+        <h2>Nossos Serviços</h2>
+        <div class="abilitiesWrapper">
+
+            <div class="abilities">
+                <img src="assets/image/barberIcons/moustache.png" alt="">
+                <h3>Barba</h3>
+            </div>
+            <div class="abilities">
+                <img src="assets/image/barberIcons/short-male-hair-shape.png" alt="">
+                <h3>Cabelo Masculino</h3>
+            </div>
+            <div class="abilities">
+                <img src="assets/image/barberIcons/long-wavy-hair-variant.png" alt="">
+                <h3>Cabelo Feminino</h3>
+            </div>
+            <div class="abilities">
+                <img src="assets/image/barberIcons/eyebrow-pencil.png" alt="">
+                <h3>Sobrancelha</h3>
+            </div>
+            <div class="abilities">
+                <img src="assets/image/barberIcons/hair-styling.png" alt="">
+                <h3>Coloração</h3>
+            </div>
+            <div class="abilities">
+                <img src="assets/image/barberIcons/beauty-treatment.png" alt="">
+                <h3>Tratamento</h3>
+            </div>
+            
+        </div>
+    </div>
 
 </body>
 </html>
