services section created

--- a/index.html
+++ b/index.html
@@ -93,5 +93,85 @@
         </div>
     </div>
 
+    <div class="priceContainer">
+        <h2>Nossos Preços</h2>
+
+        <div class="servicesContainer">
+            <div class="priceWrapper">
+                <h3>Cortes</h3>
+                <div class="priceTable">
+                    <div class="priceType">
+                        <h4>Corte Masculino</h4>
+                        <span>R$15</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate qui quo aliquam provident. Corporis!</p>
+                </div>
+                <div class="priceTable">
+                    <div class="priceType">
+                        <h4>Corte Feminino</h4>
+                        <span>R$20</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate qui quo aliquam provident. Corporis!</p>
+                </div>
+                <div class="priceTable">
+                    <div class="priceType">
+                        <h4>Corte com Risquinho</h4>
+                        <span>R$18</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate qui quo aliquam provident. Corporis!</p>
+                </div>
+            </div>
+            <div class="priceWrapper">
+                <h3>Hidratação</h3>
+                <div class="priceTable">
+                    <div class="priceType">
+                        <h4>Corte de Cabelo</h4>
+                        <span>R$10</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate qui quo aliquam provident. Corporis!</p>
+                </div>
+                <div class="priceTable">
+                    <div class="priceType">
+                        <h4>Corte de Cabelo</h4>
+                        <span>R$10</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate qui quo aliquam provident. Corporis!</p>
+                </div>
+                <div class="priceTable">
+                    <div class="priceType">
+                        <h4>Corte de Cabelo</h4>
+                        <span>R$10</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate qui quo aliquam provident. Corporis!</p>
+                </div>
+            </div>
+            <div class="priceWrapper">
+                <h3>Outros</h3>
+                <div class="priceTable">
+                    <div class="priceType">
+                        <h3>Corte de Cabelo</h3>
+                        <span>R$10</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate qui quo aliquam provident. Corporis!</p>
+                </div>
+                <div class="priceTable">
+                    <div class="priceType">
+                        <h3>Corte de Cabelo</h3>
+                        <span>R$10</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate qui quo aliquam provident. Corporis!</p>
+                </div>
+                <div class="priceTable">
+                    <div class="priceType">
+                        <h3>Corte de Cabelo</h3>
+                        <span>R$10</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate qui quo aliquam provident. Corporis!</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 </body>
 </html>
