solving some bugs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <script defer src="assets/js/script.js"></script>
-    <title>Document</title>
+    <title>Gean Lucas | Barbershop</title>
 </head>
 <body>
     <header class="headerContainer fullTop">
